fixed assessment layout on IE

--- a/lcc/src/less/assessment.less
+++ b/lcc/src/less/assessment.less
@@ -370,8 +370,16 @@ body:not(.ass-results) {
         justify-content: center;
         align-items: center
     }
+    &.isIE {
+             .content-wrapper {
+                margin-top: 5rem;
+                display: block!important;
+            }
+    }
 }
 
+
+      
 
 #questions-container {
     border-left: 1px solid @border;
